<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SelectMenu">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/startRoom"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0"
            android:enabled="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/startRoom"
            android:layout_row="0"
            android:layout_column="1"
            android:hint="@string/inputExample"
            android:gravity="center_horizontal"
            android:enabled="true"
            android:maxLength="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/endRoom"
            android:id="@+id/textView2"
            android:layout_row="1"
            android:layout_column="0"
            android:enabled="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/endRoom"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="@string/inputExample2"
            android:gravity="center_horizontal"
            android:enabled="true"
            android:numeric="integer"
            android:maxLength="3" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:id="@+id/startCalcButton"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:gravity="center"
            android:enabled="true" />
    </GridLayout>
</RelativeLayout>
